# Oceanix

./: Cargo.toml  README.md  REQUIREMENTS.md  package-lock.json  package.json
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/attachments/: clipboard-20260711-160800.897365-000003.css
ai-server/: pyproject.toml
ai-server/src/oceanix_ai_server/: agent.py  http_api.py  memory.py  prompts.py  providers.py  rag.py  server.py  tool_registry.py  tools.py
ai-server/src/oceanix_ai_server/models/: __init__.py  chat.py  tool.py
ai-server/src/oceanix_ai_server/providers/: __init__.py  anthropic.py  base.py  deepseek.py  ollama.py  openai.py
ai-server/src/oceanix_ai_server/routes/: __init__.py  mcp_routes.py
ai-server/src/oceanix_ai_server/services/: __init__.py  agent_service.py  chat_service.py  llm_service.py  tool_service.py
ai-server/src/oceanix_ai_server/tools/: __init__.py
ai-server/src/oceanix_ai_server/tools/builtin/: __init__.py  file_tools.py
app/: index.html  package.json  vite.config.ts
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src/components/: ActivityBar.tsx  AgentDialog.tsx  AgentSettings.tsx  ChatPanel.tsx  DebugPanel.tsx  EditorTabs.tsx  FileExplorer.tsx  GitPanel.tsx  MenuBar.tsx  OutlinePanel.tsx  OutputPanel.tsx  ProblemsPanel.tsx  SearchPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  Terminal.tsx  TerminalPanel.tsx  WelcomePage.tsx
app/src/hooks/: useEditorGroups.ts  useLayout.ts  useResizable.ts
app/src/i18n/: LocaleContext.tsx  locales.ts
app/src/search/: queryBuilder.ts  types.ts
app/src/services/: agentConfig.ts  agentOpener.ts  agentPersistence.ts  agentRegistry.ts  agentService.ts  api.ts  chatModel.ts  commandBus.ts  commandRegistry.ts  contextKeyService.ts  extensions.ts  fileHelpers.ts  layoutTypes.ts  lifecycleService.ts  notificationService.tsx  serviceCollection.ts  (+4 more)
crates/oceanix-ai/: Cargo.toml
crates/oceanix-git/: Cargo.toml
crates/oceanix-lsp/: Cargo.toml
crates/oceanix-plugin/: Cargo.toml
crates/oceanix-pty/: Cargo.toml
crates/oceanix-search/: Cargo.toml
scripts/: generate_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.oceanix/rag/: file_hashes.json  index.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 32x32.png.b64
src-tauri/src/: commands.rs  lib.rs  main.rs
(+28 files in other folders)
