[workspace]
members = [
    "src-tauri",
    "crates/oceanix-lsp",
    "crates/oceanix-pty",
    "crates/oceanix-git",
    "crates/oceanix-search",
    "crates/oceanix-ai",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Oceanix"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
