[project]
name = "oceanix-ai-server"
version = "0.1.0"
description = "Oceanix AI Sidecar — MCP Server with LangGraph Agent, LangChain tools, and RAG"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-ollama>=0.2",
    "openai>=1.0",
    "anthropic>=0.40",
    "ollama>=0.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.0",
    "mem0ai>=0.1",
    "llama-index>=0.12",
    "qdrant-client>=1.12",
    "tree-sitter>=0.23",
    "loguru>=0.7",
    "python-dotenv>=1.0",
]

[project.scripts]
oceanix-ai = "oceanix_ai_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
