[package]
name = "oceanix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "oceanix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dirs = "5"

# Workspace crates (Phase 0: just dependencies, no logic yet)
oceanix-lsp = { path = "../crates/oceanix-lsp" }
oceanix-pty = { path = "../crates/oceanix-pty" }
oceanix-git = { path = "../crates/oceanix-git" }
oceanix-search = { path = "../crates/oceanix-search" }
oceanix-ai = { path = "../crates/oceanix-ai" }
oceanix-plugin = { path = "../crates/oceanix-plugin" }
notify = "7"
